# asteroids

./: .gitignore  CMakeLists.txt  Gamepad.cpp  Gamepad.hpp  Main.cpp  Missile.cpp  Missile.hpp  PhysicalMissile.cpp  PhysicalMissile.hpp  README.md
datamodel/: Battle.cpp  Battle.hpp  DataModel.cpp  DataModel.hpp  DataModel_Server.cpp  DataModel_Server.hpp  MineOrder.cpp  MineOrder.hpp  MoveOrder.cpp  MoveOrder.hpp  Order.hpp  Planet.cpp  Planet.hpp  Player.cpp  Player.hpp  ShipOrder.cpp  ShipOrder.hpp  ShipyardOrder.cpp  ShipyardOrder.hpp
ext/load3ds/: C3DSFormat.h  C3DSReaderBase.h
ext/load3ds/math3d++/: math3d++.h
io/: LevelParser.cpp  LevelParser.hpp  MeshReader.hpp  PLYElement.hpp  PLYTraits.hpp  Read3DS.cpp  Read3DS.hpp  ReadJPG.hpp  ReadOBJ.cpp  ReadPLY.cpp  ReadPLY.hpp  ReadTGA.hpp  ReadTIFF.cpp  ReadTIFF.hpp  TextureFactory.cpp  TextureFactory.hpp
math/: Matrix.cpp  Matrix.hpp  Normal.hpp  Quaternion.hpp  Randomizer.cpp  Vector.hpp  Vector.tcc
models/: 01.map  10464_Asteroid_v1_Iterations-2.3ds  Level-1.map  Level-1.txt  Level-2.map  arrow.mtl~  asteroid.3ds  level.xml  missile.3ds
network/: UdpPeer.cpp  UdpPeer.hpp
network/client/: tcpclient.cpp  tcpclient.hpp  udpclient.cpp  udpclient.hpp
network/light_classes/: light_asteroid.cpp  light_asteroid.hpp  light_bullet.cpp  light_bullet.hpp  light_object.cpp  light_object.hpp  light_ship.cpp  light_ship.hpp
network/server/: CMakeLists.txt  Server.cpp  ServerPhysicsEngine.cpp  ServerPhysicsEngine.hpp  TcpServer.cpp  TcpServer.hpp  UdpServer.cpp  UdpServer.hpp  server.cpp  server.h
network/server/build_server/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_UdpServer.cpp  moc_UdpServer.cpp_parameters  server
network/server/build_server/server_autogen/: moc_predefs.h
network/testclient/: CMakeLists.txt  testclient.cpp  testclient.hpp  testclient_tcp.cpp  testclient_tcp.hpp
network/testserver/: CMakeLists.txt  Makefile  moc_testclient_tcp.cpp  testclient.pro  testserver_tcp.cpp  testserver_tcp.hpp
network/udpclient/: foo.cpp  udpclient.cpp  udpclient.hpp
physics/: BasePhysicsEngine.cpp  BasePhysicsEngine.hpp  Hittable.cpp  Hittable.hpp  ParticleEngine.cpp  ParticleEngine.hpp  PhysicalBullet.cpp  PhysicalBullet.hpp  PhysicalObject.cpp  PhysicalObject.hpp  PhysicalSpaceCraft.cpp  PhysicalSpaceCraft.hpp  PhysicsBullet.cpp  PhysicsBullet.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Transformable.cpp  Transformable.hpp
rendering/: Asteroid.cpp  Asteroid.hpp  Bullet.cpp  Bullet.hpp  ParticleEffect.cpp  ParticleEffect.hpp  Renderable.hpp  Skybox.cpp  Skybox.hpp  SpaceCraft.cpp  SpaceCraft.hpp  Sphere.cpp  Sphere.hpp  Texture.cpp  Texture.hpp  TexturedMesh.hpp  TriangleMesh.cpp  TriangleMesh.hpp
resources/: 3215.tga  arrow.ply  asteroid.ply
spielbeschreibung/: Spielbeschreibung.txt
util/: AsteroidField.cpp  AsteroidField.hpp  ColorMap.hpp  List.hpp  List.tcc  Util.cpp  gl_includes.h
view/: Camera.cpp  Camera.hpp  Controller.cpp  Controller.hpp  Doxyfile  GLWidget.cpp  GLWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
view/io/: BitmapReader.hpp  LevelParser.cpp  PLYIO.cpp  PLYIO.hpp  PLYProperty.hpp  PLYTraits.cpp  Read3DS.cpp  ReadJPG.cpp  ReadOBJ.hpp  ReadPLY.cpp  ReadPPM.cpp  ReadPPM.hpp  ReadTGA.cpp  TextureFactory.cpp  TriangleMeshFactory.cpp  TriangleMeshFactory.hpp
view/math/: Matrix.cpp  Quaternion.cpp  Randomizer.hpp
view/models/: arrow.mtl  level.xml
view/physics/: ParticleEngine.cpp  PhysicalObject.cpp  PhysicsEngine.cpp  Transformable.cpp
view/rendering/: Asteroid.cpp  Materials.hpp  Particle.hpp  ParticleEffect.cpp  SpaceCraft.cpp  Texture.hpp  TexturedMesh.cpp  TriangleMesh.cpp  TriangleMesh.hpp
view/util/: AsteroidField.cpp  ColorMap.cpp  ColorMap.hpp  SharedArray.hpp  Util.hpp
view2D/: 2DMainWindow.hpp  EndWindow.cpp  EndWindow.hpp  EndWindow.ui  GameWindow.cpp  GameWindow.hpp  GameWindow.ui  MainWindow2D.cpp  MainWindow2D.hpp  MainWindow2D.ui  MyEllipse.cpp  MyEllipse.hpp  StartingDialog.cpp  StartingDialog.hpp  StartingDialog.ui  Strategy_Window.ui  SwitchingWindowInfo.cpp  SwitchingWindowInfo.hpp  SwitchingWindowInfo.ui
